# kurai-project

./: Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: clippy.yml  rust.yml  static.yml  web-build.yml
js/: macroquad_bundle.min.js
resources/background/: stage1.json  stage2.json
resources/sfx/: normal_shoot
resources/shaders/: bloom.frag.glsl  bloom.vert.glsl  default.vert.glsl  hit.frag.glsl  hit.vert.glsl  lightmap.frag.glsl  lightmap.vert.glsl  post_processing.frag.glsl  shadow_fragment.glsl  shadow_vertex.glsl  stage1.frag.glsl  stage1.vert.glsl
resources/shaders/lib/: noise.glsl  utils.glsl
resources/textures/projectiles/: generic-projectiles.json
src/: app.rs  constant.rs  controls.rs  difficulty.rs  drawable.rs  game.rs  konst.rs  lib.rs  main.rs  pause.rs  score.rs  state.rs  utils.rs  window.rs
src/assets/: assets_manager.rs  konst.rs  mod.rs  preload.rs
src/attack_info/: mod.rs
src/attack_info/non_spells/: fairy_burst.rs  fairy_spin_delay.rs  mod.rs
src/attack_info/nonspells/: fairy_burst.rs  fairy_spin.rs  fairy_spin_delay.rs  mod.rs
src/attack_info/players/: mod.rs  remi.rs
src/attack_type/: mod.rs
src/camera/: mod.rs  screen_shake.rs
src/components/: attack_info.rs  bullet.rs  circle_hitbox2d.rs  controllable.rs  death.rs  enemy.rs  hitbox.rs  hitpoint.rs  hud.rs  item.rs  mod.rs  move_params.rs  player.rs  sprite.rs  sprite2d.rs  transform2d.rs  velocity.rs  waypoint.rs  waypoints.rs
src/engine/: animation.rs  controls.rs  debug.rs  loading.rs  mod.rs  spawner.rs  stage.rs  ui.rs
src/engine/assets/: mod.rs
src/engine/camera/: mod.rs  screen_buffer2d.rs  screen_shake.rs
src/engine/components/: circle_hitbox2d.rs  custom_draw.rs  layer2d.rs  mod.rs  moveable.rs  movement.rs  movement_queue.rs  sprite2d.rs  transform2d.rs  velocity.rs
src/engine/ecs/: mod.rs  spawner.rs  system_draw.rs  system_update.rs
src/engine/graphics/: mod.rs
src/engine/math/: complex.rs  mod.rs  normalization.rs
src/engine/rand/: mod.rs
src/engine/task/: mod.rs
src/entity/: bullet.rs  items.rs  mod.rs  player.rs  remilia_scarlet.rs  spawner.rs
src/math/: mod.rs  vec2.rs
src/render/: camera.rs  mod.rs  render_target.rs  renderer.rs
src/scene/: lazy_stage.rs  mod.rs  scene.rs  stage.rs  stage_info.rs
src/shader/: mod.rs
src/shaders/: mod.rs
src/stage/: mod.rs  stage1.rs  utils.rs
src/system/: draw.rs  mod.rs  update.rs
src/time/: mod.rs
src/ui/: game_hud.rs  game_over.rs  mod.rs  pause.rs  text.rs
src/utils/: fps_counter.rs  mod.rs
src/window/: icon.rs  mod.rs  utils.rs
(+19 files in other folders)
