[package]
name = "scarlet-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
module_name_repetitions = "allow"

# Enable a small amount of optimization in debug mode
[profile.dev]
# opt-level = 1
incremental = true

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
color-eyre = "0.6.2"
hecs = "0.10.4"
keyframe = "1.1.1"
macroquad = { version = "0.4.5", features = ["audio", "backtrace", "log"] }
num-complex = "0.4.5"
num-traits = "0.2.18"
rayon = "1.8.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
